# werk

./: pyproject.toml  rxconfig.py
werk/: constants.py  models.py  state.py  template.py  werk.py
werk/components/: task_badge.py
werk/components/task/: add.py  badge.py
werk/pages/: index.py
werk/pages/task/: index.py
werk/pages/tasks/: index.py
