[tool.poetry]
name = "werk"
version = "0.1.0"
description = "Task control & management"
authors = ["Jhair Patiño <jphatig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.6.2.post1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
